<resources>
    <string name="app_name">HWU Timetable</string>
    <!-- Activities titles -->
    <string name="main_activity_title">Timetables</string>
    <string name="add_programme_activity_title">Add Programme</string>
    <string name="add_course_activity_title">Add Course(s)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_timetable">View Timetable</string>

    <!-- Main Activity -->
    <string name="no_timetables">No timetables found</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_confirmation">Are you sure?</string>
    <!-- Timetable item context menu dialog -->
    <string name="item_context_menu_title">Choose action</string>
    <string name="item_context_menu_rename">Rename</string>
    <string name="item_context_menu_delete">Delete</string>

    <!-- Add Programme Timetable Activity -->
    <string name="departments">Department:</string>
    <string name="levels">Level:</string>
    <string name="semester">Semester:</string>
    <string name="semester_1">Semester 1</string>
    <string name="semester_2">Semester 2</string>
    <string name="semester_any">Any semester</string>
    <string name="groups">Groups</string>
    <string name="submit">Get Timetable</string>
    <string name="follow">Save on the device</string>

    <!-- Add Course(s) Timetable Activity -->
    <string name="course">Course:</string>
    <string name="add_course_button_text">Add course(s)</string>
    <string name="courses">Selected Courses</string>
    <string name="generate_timetable">Generate timetable</string>
    <string name="add_programme">Add programme</string>
    <string name="name_not_unique_error">This name is already used.</string>

    <!-- Timetable View Activity -->
    <string name="viewing_week">Select Week:</string>

    <!-- Settings Activity -->
    <string name="update_notification_channel_name">Update notifications</string>
    <string name="update_notification_channel_desc">
        Update notifications appear whenever a stored timetable has been updated
    </string>
    <string name="update_settings">Update settings</string>
    <string name="update_time">Update time:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_now_enabled_summary">Forces the update check process to start immediately.</string>
    <string name="update_now_disabled_summary">No connection to the Internet</string>
    <string name="enable_updates_title">Check for timetable updates</string>
    <string name="allow_wifi_title">Allow using WiFi</string>
    <string name="allow_mobile_data_title">Allow using mobile data</string>
    <string name="update_frequency_title">Update frequency</string>
    <string name="update_frequency_summary">Number of days between each update check</string>
    <string name="use_simplified_view_summary">Simplified view only contains a class description and room name. Original
        view is exactly the same as you see it on the website
    </string>
    <string name="use_simplified_view_title">Use simplified timetable class view</string>
    <string name="run_setup_summary">Opens the setup procedure that takes you through the initial app setup.</string>
    <string name="run_setup_title">Run setup</string>

    <!-- AppManager Activity -->
    <string name="setup_activity_title">Setup</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="setup_step_1">
        The app can check for timetable updates automatically.\n
        Please adjust these settings based on your preferences.
    </string>
    <string name="setup_step_2">
        There are two types of views shown below.
        Please pick the one you\'d like to use.
    </string>
    <string name="setup_step_3">
        Finally, let\'s add your timetable!
    </string>
    <string name="setup_step_3_no_internet">
        You have no Internet connection at the moment.\n
        Please come back when you will have access to the Internet.
    </string>

    <!-- Preference keys -->
    <string name="shared_pref_file_key">com.github.hwutimetable.PREFERENCE_FILE_KEY</string>
    <string name="wifi_pref_key">allow_wifi</string>
    <string name="data_pref_key">allow_data</string>
    <string name="time_pref_key">time_preference</string>
    <string name="frequency_pref_key">frequency_preference</string>
    <string name="updates_pref_key">enable_updates</string>
    <string name="update_now">update_now</string>
    <string name="run_setup">run_setup</string>
    <string name="last_update">last_update</string>
    <string name="update_details">update_details</string>
    <string name="use_simplified_view">use_simplified_view</string>
    <string name="last_ran_version">last_ran_version</string>
    <string name="first_run">first_run</string>
    <!-- Tags -->
    <string name="timetable_class_simple">timetable_class_simple</string>
    <string name="timetable_class_original">timetable_class_original</string>
    <string name="class_code_label">Class code:</string>
    <string name="class_label">Class:</string>
    <string name="room_label">Room:</string>
    <string name="lecturer_label">Lecturer:</string>
    <string name="type_label">Type:</string>
    <string name="start_time_label">Start time:</string>
    <string name="end_time_label">End time:</string>
    <string name="weeks">Weeks:</string>
    <string name="add_course">Add course</string>
    <string name="add_timetable">Add timetable</string>
    <string name="delete_course">Delete course</string>
    <string name="timetable_name">Timetable Name:</string>
    <string name="timetable_name_placeholder">My main timetable</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="enter_programme_name">Enter programme name</string>
    <string name="edit_timetable">Edit timetable name</string>
    <string name="rename_dialog_title">Rename timetable</string>
    <string name="rename">Rename</string>

    <!-- No Optimization Dialog -->
    <string name="battery_opt_dialog_text">is known to have functionality-breaking battery optimisations. Please turn
        off the battery optimisations for this application as otherwise, it will not function properly.
    </string>
    <string name="autostart_dialog_text">requires autostart in order for the app to function properly. Please turn it
        on.
    </string>
    <string name="battery_opt_continue">Continue</string>

    <!-- Change Log Dialog -->
    <string name="changelog_dialog_title">Changes in version:</string>
    <string name="changelog_dialog_pos_button">Close</string>
    <string name="setup_original_view">Original View</string>
    <string name="setup_simplified_view">Simplified View</string>
    <string name="setup_timetable_courses">If you have any optional courses this semester, click the button below and to
        create your timetable
    </string>
    <string name="setup_timetable_programme">Otherwise, to add a timetable for your programme, click the button below
    </string>

    <!-- Misc -->
    <string name="cancel">Cancel</string>
</resources>
