<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:ignore="RtlHardcoded">
    <GridLayout
            android:id="@+id/item_info_grid"
            android:background="@drawable/rectangle_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/edge_margin"
            android:layout_marginRight="25dp"
            android:rowCount="8"
            android:columnCount="2">
        <TextView
                android:text="@string/class_code_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/class_code"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/class_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/class_name"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/room_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/class_room"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/lecturer_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/class_lecturer"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/type_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/class_type"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/start_time_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/item_start_time"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/end_time_label"
                style="@style/ClassInfoLabel"/>
        <TextView
                android:id="@+id/item_end_time"
                style="@style/ClassInfo"/>
        <TextView
                android:text="@string/weeks"
                style="@style/ClassInfoLabel"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:id="@+id/class_weeks"
                style="@style/ClassInfo"/>
    </GridLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/close_class_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/item_info_grid"
            app:layout_constraintBottom_toTopOf="@id/item_info_grid"
            app:layout_constraintRight_toRightOf="@id/item_info_grid"
            app:layout_constraintLeft_toRightOf="@id/item_info_grid"
            app:backgroundTint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_close"
            app:fabCustomSize="30dp"
            android:scaleType="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>