<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/setup_timetable_courses"
              android:textSize="@dimen/setup_step_text_size"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>
    <Button android:id="@+id/add_course_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/add_course_button_text"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="40dp"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/setup_timetable_programme"
              android:textSize="@dimen/setup_step_text_size"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>
    <Button android:id="@+id/add_programme_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/add_programme"/>
</LinearLayout>