<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/edge_margin"
        android:layout_marginEnd="@dimen/edge_margin"
        tools:context=".AddCourseActivity">
    <LinearLayout
            android:id="@+id/controls_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/timetable_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timetable_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/heading_text_size"/>
        <EditText
                android:id="@+id/timetable_name"
                android:hint="@string/timetable_name_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@id/timetable_name_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="6dp"/>
        <TextView
                android:id="@+id/departments_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departments"
                android:textSize="@dimen/heading_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <Spinner
                android:id="@+id/departments_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/departments_textview"/>
        <TextView
                android:id="@+id/semester_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/levels_textview"/>
        <Spinner
                android:id="@+id/semester_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/semester_filter_values"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/semester_spinner"/>
        <TextView
                android:id="@+id/courses_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textSize="@dimen/heading_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/levels_spinner"/>
        <AutoCompleteTextView
                android:id="@+id/groups_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_course_name"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textNoSuggestions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/groups_textview"/>
    </LinearLayout>
    <Button
            android:id="@+id/add_course_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_button_text"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/controls_container"
            app:layout_constraintLeft_toLeftOf="@id/controls_container"
            app:layout_constraintRight_toRightOf="@id/controls_container"/>
    <TextView
            android:id="@+id/courses_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/courses"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/add_course_button"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/courses_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/courses_list_label"
            app:layout_constraintBottom_toTopOf="@id/save_checkbox"/>
    <CheckBox
            android:id="@+id/save_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/follow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/get_timetable"/>
    <Button
            android:id="@+id/get_timetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_timetable"
            android:layout_margin="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/courses_list"
            app:layout_constraintBottom_toBottomOf="@id/courses_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>