
<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="Update checks">

        <SwitchPreferenceCompat
                app:key="enable_updates"
                app:defaultValue="true"
                app:title="Check for timetable updates"/>

        <CheckBoxPreference
                app:key="allow_wifi"
                app:title="Allow using WiFi"
                app:dependency="enable_updates"/>

        <CheckBoxPreference
                app:key="allow_data"
                app:title="Allow using mobile data"
                app:dependency="enable_updates"/>

        <com.github.hwutimetable.settings.TimePreference
                app:key="time_preference"
                app:title="Update time"
                app:summary="Click here to change the update time."
                app:defaultValue="90"
                app:dependency="enable_updates"/>

        <com.github.hwutimetable.settings.NumberPreference
                app:key="frequency_preference"
                app:title="Update frequency"
                app:summary="Number of days between each update check"
                app:defaultValue="1"
                app:dependency="enable_updates"
                app:minValue="1"
                app:maxValue="14"/>

        <Preference app:title="Check for updates now"
                    app:key="@string/update_now"
                    app:summary="@string/update_now_enabled_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            app:title="Timetable View">
        <SwitchPreference
                app:title="Use simplified timetable class view"
                app:summary="Simplified view only contains a class description and room name. Original view is exactly the
same as you see it on the website"
                app:key="@string/use_simplified_view"
                app:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
            app:title="About">
        <Preference
                app:key="version"
                app:title="Build version"
                app:summary="1.0"/>
    </PreferenceCategory>
</PreferenceScreen>
