<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/edge_margin"
        android:layout_marginEnd="@dimen/edge_margin"
        tools:context=".AddProgrammeTimetableActivity">

    <LinearLayout
            android:id="@+id/controls_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/departments_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departments"
                android:textSize="@dimen/heading_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <Spinner
                android:id="@+id/departments_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/departments_textview"/>
        <TextView
                android:id="@+id/levels_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levels"
                android:textSize="@dimen/heading_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/departments_spinner"/>
        <Spinner
                android:id="@+id/levels_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/levels_textview"/>
        <TextView
                android:id="@+id/semester_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/levels_textview"/>
        <Spinner
                android:id="@+id/semester_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/semester_filter_values"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/semester_spinner"/>
        <TextView
                android:id="@+id/groups_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups"
                android:textSize="@dimen/heading_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/levels_spinner"/>
        <AutoCompleteTextView
                android:id="@+id/groups_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_programme_name"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textNoSuggestions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/levels_spinner"/>
        <CheckBox
                android:id="@+id/save_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:checked="true"
                android:text="@string/follow"/>
    </LinearLayout>
    <Button
            android:id="@+id/get_timetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/controls_container"/>
    <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.65"/>
</androidx.constraintlayout.widget.ConstraintLayout>