<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".setup.SetupActivity">

    <TextView
            android:id="@+id/step_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/setup_step_1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="#000"/>
    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/step_description"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <Button android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/setup_buttons_margin"
            android:layout_marginBottom="@dimen/setup_buttons_margin"
            android:text="@string/back"
            android:visibility="invisible" tools:ignore="RtlHardcoded"/>
    <Button android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/setup_buttons_margin"
            android:layout_marginBottom="@dimen/setup_buttons_margin"
            android:text="@string/next" tools:ignore="RtlHardcoded"/>
</androidx.constraintlayout.widget.ConstraintLayout>